Fixed bug #27007 (missing connection closure when connect fails in pgsql).